--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5414,7 +5414,12 @@ a.list-group-item:focus {
 }
 
 .panel-title > a {
-  color: inherit;
+  color: black;
+}
+
+.panel-title > a:hover{
+    text-decoration: none;
+    color: white;
 }
 
 .panel-footer {
