--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,48 +1,15 @@
-
 <footer>
-<div class="container">    
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="col-md-3">
-        <ul class="list-unstyled">
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Contact & support</a></li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul class="list-unstyled">
-          <li>Applications<li>
-          <li><a href="#">Product for Mac</a></li>           
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul class="list-unstyled">
-          <li>Services<li>
-          <li><a href="#">Web analytics</a></li>          
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul class="list-unstyled">
-          <li>Documentation<li>
-          <li><a href="#">Product Help</a></li>          
-        </ul>
-      </div>  
-    </div>
-  </div>
-  <hr>
   <div class="row">
     <div class="col-lg-12">
       <div class="col-md-8">
-        <a href="#">Terms of Service</a>    
-        <a href="#">Privacy</a>    
+        <a href="#">Termos e Condições</a> |
+        <a href="#">Privacidade</a>|
+        <a href="#">Contactos</a>
       </div>
       <div class="col-md-4">
-        <p class="muted pull-right">© 2013 Company Name. All rights reserved</p>
+        <p class="muted pull-right" style="color:white">© <%= Time.now.year %> AGROSOCIAL. Todos os direitos reservados.</p>
       </div>
     </div>
   </div>
 </div>
-
-
-
 </footer>
