[Bug Fixed] Tutorial

--- a/app/views/academy/tutorials/edit.html.erb
+++ b/app/views/academy/tutorials/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing academy_tutorial</h1>
-
 <%= render 'form' %>
 
-<%= link_to 'Show', @academy_tutorial %> |
-<%= link_to 'Back', academy_tutorials_path %>
+<%= link_to 'Ver', @academy_tutorial %> |
+<%= link_to 'Voltar', academy_tutorials_path %>
