--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -4,7 +4,7 @@
 <div class="col-lg-12">
           <section class="panel">
             <header class="panel-heading border-header">
-               <h3><%= @academy_tutorial.title %><h3>
+               <h3><%= @academy_tutorial.title %></h3>
             </header>
             <div class="panel-body">
 
@@ -33,5 +33,7 @@
       </section>
     </div>
 
-<%= link_to 'Edit', edit_academy_tutorial_path(@academy_tutorial) %> |
-<%= link_to 'Back', academy_tutorials_path %>
+<% if user_signed_in? && current_user.id == @academy_tutorial.user_id %>
+    <%= link_to 'Editar', edit_academy_tutorial_path(@academy_tutorial) %> |
+<% end %>
+<%= link_to 'Voltar', academy_tutorials_path %>
