--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -159,9 +159,9 @@
 
         <!-- USER-->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <% image_tag current_user.avatar.url%>
-            <span id="userNick"><%= current_user.name.split(" ")[0] %></span>
+          <a href="#" class="dropdown-toggle" style="padding-top:9px; padding-bottom:9px;" data-toggle="dropdown" >
+            <!--<% image_tag current_user.avatar.url%>-->
+            <span><%= image_tag current_user.avatar.url(:medium), style:"background-color:white; width:35px; " %></span>
             <b class="caret" id="dropCarret"></b>
           </a>
 
