[Bug Fixed] Ads Filter coiso)

--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -131,7 +131,12 @@
       <ul class="dropdown-menu" role="menu">
         <% @categories.each do |cat| %>
             <li>
-              <%= check_box_tag "search[]","cat:#{cat.id}" %>
+              <% @myString = "cat:" + "#{cat.id}";
+                 if params[:search].include?(@myString) %>
+                <%= check_box_tag "search[]","cat:#{cat.id}","active" %>
+              <% else %>
+                <%= check_box_tag "search[]","cat:#{cat.id}" %>
+              <% end %>
               <%= cat.name %>
             </li>
         <% end %>
@@ -147,7 +152,12 @@
       <ul class="dropdown-menu" role="menu">
         <% @cities.each do |city| %>
             <li>
-              <%= check_box_tag "search[]","city:#{city.id}"%>
+              <% @myString = "city:" + "#{city.id}";
+                 if params[:search].include?(@myString) %>
+                <%= check_box_tag "search[]","city:#{city.id}", "active" %>
+              <% else %>
+                  <%= check_box_tag "search[]","city:#{city.id}" %>
+              <% end %>
               <%= city.city %>
             </li>
         <% end %>
