--- a/app/views/academy/questions/_form.html.erb
+++ b/app/views/academy/questions/_form.html.erb
@@ -19,7 +19,7 @@
     <div class="control-group">
       <%= f.label :text, "Pergunta:",:class=>"control-label" %>
       <div class="controls">
-        <%= f.text_area :text, :placeholder => "Defina a sua questão..." , :id => "some-textarea", :class=>"form-control",:rel=>"tooltip",:title=>"Explique de forma clara e sucinta a sua questão.", :col => 5 %>
+        <%= f.text_area :text, :placeholder => "Defina a sua questão..." , :id => "some-textarea", :class=>"form-control",:rel=>"tooltip",:title=>"Explique de forma clara e sucinta a sua questão." %>
       </div>
     </div>
 
