--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -3,16 +3,15 @@
 <head>
   <title>Agrosocial</title>
 
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application","user" "data-turbolinks-track" => true %>  <!--Google Fonts -->
+  <%= javascript_include_tag "application","user" "data-turbolinks-track" => true %>  
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
 
-
   <link rel="shortcut icon" href="">
-  <!--Google Fonts -->
+
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
 
@@ -33,35 +32,28 @@
       <aside class="profile-nav col-lg-3">
         <section class="panel">
           <div class="user-heading round">
-            <a href="#">
-              <%= image_tag @user.avatar.url(:medium),:width => "70%"%>
-           </a>
-           <h1>
-            <%= @user.name %>
-           </h1>
-
-           <p>
-            <%= @user.email %>
-           </p>
+            <a href="#"><%= image_tag @user.avatar.url(:medium),:width => "70%"%></a>
+            <h1><%= @user.name %></h1>
+            <p>
+              <%= @user.email %>
+            </p>
           </div>
           <ul class="nav nav-pills nav-stacked">
-                 <li class="active">
-                    <%= link_to "Perfil".html_safe , user_path(current_user.id), :class => "fa fa-user" %>
+            <li class="active">
+              <%= link_to "Perfil".html_safe , user_path(current_user.id), :class => "fa fa-user" %>
+            </li>
 
-                </li>
-
-                <li>
-                      <%= link_to "Editar Perfil".html_safe , edit_user_registration_path(), :class => "fa fa-edit" %>
-
-
-               </li>
-               <li> <%= link_to " Os Meus Anúncios".html_safe , myads_user_path(current_user.id), :class => "fa fa-calendar" %> <span class="label label-danger pull-right r-activity"><%= @user.ads.count %></span></li>
-
+            <li>
+              <%= link_to "Editar Perfil".html_safe , edit_user_registration_path(), :class => "fa fa-edit" %>
+            </li>
+            <li> 
+              <%= link_to " Os Meus Anúncios".html_safe , myads_user_path(current_user.id), :class => "fa fa-calendar" %> <span class="label label-danger pull-right r-activity"><%= @user.ads.count %></span>
+            </li>
           </ul>
-         </section>
+        </section>
       </aside>
 
-     <%= yield %>
+    <%= yield %>
 
     </div>
 
