--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
         <ul class="dropdown-menu">
           <li class="container" id="searchBox" role="search">
             <form class="input-group" id="input-groupBox">
-              <input type="text" name="search" style="vertical-align: center;" class="form-control typeahead" >
+              <input type="text" name="search" style="vertical-align: center;" class="form-control typeahead" value="<%= params[:search] %>">
               
               <span class="input-group-btn">
                 <input value="Pesquisar" type="submit" class="btn btn-default" id="omnisearch-btn" >
