--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
 <aside class="profile-info col-lg-9">
-    <section class="panel" >
+    <section class="panel" style="margin-right:15px;">
         <form>
           <textarea placeholder="Em que estás a pensar?" rows="2" class="form-control input-lg p-text-area"></textarea>
         </form>
@@ -24,7 +24,7 @@
         </footer>
     </section>
 
-    <section class="panel">
+    <section class="panel" style="margin-right:15px;">
         <div class="panel-body bio-graph-info">
             <h1>Biografia</h1>
             <div class="row">
@@ -53,7 +53,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="panel" style="margin-right:15px;">
         <div class="row">
             <div class="col-lg-6">
                 <div class="panel">
