--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -18,11 +18,15 @@
 
     padding: 15px;
     background: #f1f2f7;
-      color: #3A2E2E;
+    /*color: #3A2E2E;
  
     font-family: 'Open Sans', sans-serif;
-    
-    font-size:13px;
+    font-size:13px;*/
+
+    font-family: "Oswald";
+    font-weight: normal;
+    font-size: 14px;
+    color: #293a49;
 }
 
 
