--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <div class="row">
+  <div class="row" style="margin-right:0px;">
     <div class="col-lg-12">
       <div class="col-md-8">
         <a href="#">Termos e Condições</a> |
