tamanho dos ads corrigido no titulo do anuncio

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -35,7 +35,7 @@
                 <% end %>
               </div>
             <% end %>
-            <h4><%= link_to ad.title, ad %></h4>
+            <div style="height:50px"><%= link_to ad.title, ad %></div>
             <div style="height:50px"><i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %></div>
           </div>
         </div>
