--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -239,7 +239,7 @@
                         <% end %>
                      </div>
                      <% end %>
-                     <h4><%= link_to ad.title, ad %></h4>
+                     <div style="height:50px"><%= link_to ad.title, ad %></div>
                      <div style="height:50px"><i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %></div>
                   </div>
                </div>
@@ -271,7 +271,7 @@
                         <% end %>
                      </div>
                      <% end %>
-                     <h4><%= link_to ad.title, ad %></h4>
+                     <div style="height:50px"><%= link_to ad.title, ad %></div>
                      <div style="height:50px"><i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %></div>
                   </div>
                </div>
