--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
     </section>
 
     <section class="panel" style="margin-right:15px;">
-        <div class="row">
+        <div class="row" style="margin-right:0px;">
             <div class="col-lg-6">
                 <div class="panel">
                     <div class="panel-body">
