[Update Feature] Academy: left and right sidebar search

--- a/app/views/academy/questions/new.html.erb
+++ b/app/views/academy/questions/new.html.erb
@@ -1,5 +1,5 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
+<div class="panel">
+  <div class="panel-heading border-header">
     <h3 class="panel-title">Nova Questão</h3>
   </div>
   <div class="panel-body">
