--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -1,4 +1,44 @@
 <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
+
+  <section class="panel">
+    <div class="panel-body">
+      <div>
+        <div class="newest-classifieds">
+          <div class="media">
+            <a class="pull-left" href="#">
+              <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
+            </a>
+            <div class="media-body">
+              <p><a href="#"><strong>Destaque</strong></a></p>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
+            </div>
+          </div>
+          <div class="media">
+            <a class="pull-left" href="#">
+              <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
+            </a>
+            <div class="media-body">
+              <p><a href="#"><strong>Destaque</strong></a></p>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
+            </div>
+          </div>
+          <div class="media">
+            <a class="pull-left" href="#">
+              <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
+            </a>
+            <div class="media-body">
+              <p><a href="#"><strong>Destaque</strong></a></p>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
+            </div>
+          </div>
+          <p class="text-right show-more"><a href="#">Mais...</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+
+<div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
     <section class="panel">
         <header class="panel-heading">
             Mais Vistos
@@ -36,62 +76,3 @@
         </div>
     </section>
 </div>
-<!--
-<section class="panel">
-  <header class="panel-heading">Destaques</header>
-  <div class="panel-body">
-    <ul class="thumbnails list-unstyled">
-
-      <li style="margin-bottom: -25px">
-        <div class="thumbnail" style="padding: 0">
-          <span class="price" style="font-size: 8px">EVENTO</span>
-          <div style="padding:4px">
-            <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
-          </div>
-          <div class="caption">
-            <p style="text-align:right">Nome do Anuncio/Evento</p>
-          </div>
-        </div>
-      </li>
-
-      <li style="margin-bottom: -25px">
-        <div class="thumbnail" style="padding: 0">
-          <span class="price" style="font-size: 8px">EVENTO</span>
-          <div style="padding:4px">
-            <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
-          </div>
-          <div class="caption">
-            <p style="text-align:right">Nome do Anuncio/Evento</p>
-          </div>
-        </div>
-      </li>
-
-      <li style="margin-bottom: -25px">
-        <div class="thumbnail" style="padding: 0">
-          <span class="price" style="font-size: 8px">EVENTO</span>
-          <div style="padding:4px">
-            <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
-          </div>
-          <div class="caption">
-            <p style="text-align:right">Nome do Anuncio/Evento</p>
-          </div>
-        </div>
-      </li>
-
-      <li style="margin-bottom: -25px">
-        <div class="thumbnail" style="padding: 0">
-          <span class="price" style="font-size: 8px">EVENTO</span>
-          <div style="padding:4px">
-            <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
-          </div>
-          <div class="caption">
-            <p style="text-align:right">Nome do Anuncio/Evento</p>
-          </div>
-        </div>
-      </li>
-
-    </ul>
-
-  </div>
-</section>
--->
