--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -1,78 +1,77 @@
 <div class="well well-sm">
-        <strong>Meter Filtros</strong>
-        <div class="btn-group">
-            <a href="#" id="list" class="btn btn-default btn-sm">
-              <span class="fa fa-th-list"></span>
-              Respondidas</a>
-              <a href="#" id="grid" class="btn btn-default btn-sm">
+    <strong>Filtrar por: </strong>
+    <div class="btn-group">
+        <a href="#" id="list" class="btn btn-default btn-sm">
+          <span class="fa fa-th-list"></span>
+          Respondidas</a>
+          <a href="#" id="grid" class="btn btn-default btn-sm">
 
-              <span class="fa fa-th"></span>Activas</a>
-              <a href="#" id="grid" class="btn btn-default btn-sm">
-              <span class="fa fa-truck"></span>Outras</a>
+          <span class="fa fa-th"></span>Activas</a>
+          <a href="#" id="grid" class="btn btn-default btn-sm">
+          <span class="fa fa-truck"></span>Outras</a>
 
-        </div>
+    </div>
  </div>
 
-
-<div class="row classifieds-table">
+<div class="row">
     <div class="col-lg-12">
-      <section class="panel">
+      <section class="panel" style="margin-right: 8px">
         <header class="panel-heading "><h3>Perguntas</h3></header>
         <div class="table-responsive">
-                    <table class="table table-hover">
-                      <thead>
-                        <tr>
-                          <th>Pergunta</th>
-                          <th class="">Categoria</th>
-                          <th class="text-center">Views</th>
-                          <th class="text-center">Respostas</th>
-                        </tr>
-                      </thead>
-                      <tbody>
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th class="">Categoria</th>
+                  <th class="text-center">Views</th>
+                  <th class="text-center">Respostas</th>
+                </tr>
+              </thead>
+              <tbody>
 
-                        <% @academy_questions.each do |academy_question| %>
-                          <tr>
-                            <td class="col-sm-8 col-md-6">
-                              <div class="media">
-                                
-                                 <%= link_to (image_tag academy_question.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circlethumbnail pull-left"), academy_question.user %>
-                                </a>
-                                <div class="media-body">
-                                  <h4 class="media-heading">    
-                                    <%= link_to academy_question.title, academy_question %>
-                                  </h4>
-                                  <p><small><%= academy_question.text %></small></p>
-                                </div>
-                              </div>
-                            </td>
-                            <td>  
-                              <span class="label label-info">
-                              <%= academy_question.category.name %>
-                              </span> 
-                            </td>
-                            <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;"><strong>110 </strong></td>
-                            <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;">76x</td>
-                          </tr>
-                        <% end %>
-                     
-                      </tbody>
-                    </table>
-                  </div>
-                  <div class="col-lg-12" style="text-align: center;">
-                    <ul class="pagination">
-                      <li class="disabled"><a href="#">«</a></li>
-                      <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-                      <li><a href="#">2</a></li>
-                      <li><a href="#">3</a></li>
-                      <li><a href="#">4</a></li>
-                      <li><a href="#">5</a></li>
-                      <li><a href="#">»</a></li>
-                    </ul>
-                   
-                </div>
-               </section>
+                <% @academy_questions.each do |academy_question| %>
+                  <tr>
+                    <td class="col-sm-8 col-md-6">
+                      <div class="media">
+
+                         <%= link_to (image_tag academy_question.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circlethumbnail pull-left"), academy_question.user %>
+                        </a>
+                        <div class="media-body">
+                          <h4 class="media-heading">
+                            <%= link_to academy_question.title, academy_question %>
+                          </h4>
+                          <p><small><%= academy_question.text %></small></p>
+                        </div>
+                      </div>
+                    </td>
+                    <td>
+                      <span class="label label-info">
+                      <%= academy_question.category.name %>
+                      </span>
+                    </td>
+                    <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;"><strong>110 </strong></td>
+                    <td class="col-sm-1 col-md-1 text-center" style="vertical-align: middle;">76x</td>
+                  </tr>
+                <% end %>
+
+              </tbody>
+            </table>
+          </div>
+          <div class="col-lg-12" style="text-align: center;">
+            <ul class="pagination">
+              <li class="disabled"><a href="#">«</a></li>
+              <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+              <li><a href="#">»</a></li>
+            </ul>
+
         </div>
-      </div>
+       </section>
+</div>
+</div>
 
-<%= link_to 'Nova questão', new_academy_question_path,:class=> "btn btn-success" %>
+<%= link_to 'Nova questão', new_academy_question_path %>
 
