--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -111,69 +111,22 @@
 <% end %>
 
 
-<!-- Painel de Filtros-->
-<div class="panel panel-default">
-  <div class="panel-heading" style="background-color: rgb(237, 239, 240);">
-    <i class="icon-search"></i><span style="font-size:13px;margin-left:5px">Pesquisar por:</span>
-  </div>
-  <div class="panel-body">
+<% if user_signed_in? %>
+    <!-- Painel de Filtros-->
+    <div class="panel panel-default">
+      <div class="panel-heading" style="background-color: rgb(237, 239, 240);">
+        <i class="icon-search"></i><span style="font-size:13px;margin-left:5px">Pesquisar por:</span>
+      </div>
+      <div class="panel-body">
 
-    <% if user_signed_in? && controller_name=="ads"%>
-    <%= form_tag ads_path ,:method => :get do%>
-
-    <!-- Split button Categoria -->
-    <div class="btn-group" style="width: 100%; margin-bottom: 2px" >
-      <button type="button" class="btn btn-sm" style="width: 80%;text-align: left">Categoria</button>
-      <button type="button" class="btn btn-sm dropdown-toggle" style="width: 20%" data-toggle="dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Categoria</span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <% @categories.each do |cat| %>
-            <li>
-              <% if !params[:search].nil? %>
-                  <% if params[:search].include?("cat:" + "#{cat.id}") %>
-                    <%= check_box_tag "search[]","cat:#{cat.id}", "active" %>
-                  <%else%>
-                    <%= check_box_tag "search[]","cat:#{cat.id}" %>
-                  <% end %>
-              <% else %>
-                  <%= check_box_tag "search[]","cat:#{cat.id}" %>
-              <% end %>
-              <%= cat.name %>
-            </li>
+        <% if controller_name=="ads"%>
+            <%= render "layouts/sidebar_left_ads" %>
         <% end %>
-      </ul>
-    </div>
 
-    <div class="btn-group" style="width: 100%; margin-bottom: 2px">
-      <button type="button" class="btn btn-sm" style="width: 80%;text-align: left">Cidade</button>
-      <button type="button" class="btn btn-sm dropdown-toggle" style="width: 20%" data-toggle="dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Cidade</span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <% @cities.each do |city| %>
-            <li>
-              <% if params[:search] != nil %>
-                <%  if params[:search].include?("city:" + "#{city.id}") %>
-                    <%= check_box_tag "search[]","city:#{city.id}", "active" %>
-                <% else %>
-                    <%= check_box_tag "search[]","city:#{city.id}" %>
-                <% end %>
-               <% else %>
-                  <%= check_box_tag "search[]","city:#{city.id}" %>
-              <% end %>
-              <%= city.city %>
-            </li>
+        <% if academy? %>
+            <%= render "layouts/sidebar_left_academy" %>
         <% end %>
-      </ul>
+
+      </div>
     </div>
-
-    <%= submit_tag "Filtrar",class:"btn btn-default btn-sm",style:"width:100%" %>
-
-    <% end %>
-    <% end %>
-
-  </div>
-</div>
+<% end %>
