--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -79,7 +79,7 @@
             <li><%= link_to "Perguntas".html_safe, academy_questions_path %></li>
             <li><%= link_to "Tutoriais".html_safe, academy_tutorials_path%></li>
             <li><%= link_to "  Criar Tutorial".html_safe, new_academy_tutorial_path%></li>
-            <li><%= link_to "workshops".html_safe, academy_workshops_path %></li>
+            <li><%= link_to "Workshops".html_safe, academy_workshops_path %></li>
             </ul>
           </div>
         </div>
