--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -90,6 +90,8 @@ Nenhuma mensagem na tua caixa de entrada
                             </ul>
                         </div>
                         <div class="panel-footer">
+                            <%= link_to '<i class="fa fa-comment"></i>Ver Conversa'.html_safe  ,  message_path(talk),:class=> "btn btn-info" %>
+                          <!--
                             <div class="input-group">
                                 <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
                                 <span class="input-group-btn">
@@ -98,7 +100,7 @@ Nenhuma mensagem na tua caixa de entrada
 
                                 </span>
 
-                            </div>
+                            </div>-->
                              
                                   
                         </div>
