--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -31,12 +31,12 @@
 
                 <% @academy_questions.each do |academy_question| %>
                   <tr>
-                    <td class="col-sm-8 col-md-6">
+                    <td class="col-sm-6 col-md-10">
                       <div class="media">
 
                          <%= link_to (image_tag academy_question.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circlethumbnail pull-left"), academy_question.user %>
                         </a>
-                        <div class="media-body">
+                        <div class="media-body" style="padding:10px;"> 
                           <h4 class="media-heading">
                             <%= link_to academy_question.title, academy_question %>
                           </h4>
@@ -45,7 +45,7 @@
                       </div>
                     </td>
                     <td>
-                      <span class="label label-info">
+                      <span class="label" style="background-color:#<%= academy_question.category.color %>">
                       <%= academy_question.category.name %>
                       </span>
                     </td>
@@ -58,20 +58,12 @@
             </table>
           </div>
           <div class="col-lg-12" style="text-align: center;">
-            <ul class="pagination">
-              <li class="disabled"><a href="#">«</a></li>
-              <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li><a href="#">»</a></li>
-            </ul>
+            
 
         </div>
        </section>
 </div>
 </div>
 
-<%= link_to 'Nova questão', new_academy_question_path %>
+<%= link_to 'Nova questão', new_academy_question_path,:class=> "btn btn-info" %>
 
