--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,7 +38,8 @@
                     <p><span>Data de Nascimento</span>:<%= I18n.localize(@user.birthday) if @user.birthday %></p>
                 </div>
                 <div class="bio-row">
-                    <p><span>Ocupação </span>: <%= @user.ocupation %></p>
+
+                    <p><span>Ocupação Resolver isto</span>: <%= @user %></p>
                 </div>
                 <div class="bio-row">
                     <p><span>Email </span>: <%= @user.email %></p>
