[Bug FIx Production]

--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -162,7 +162,7 @@
          <div class ="ads_description">
             <p>
                <strong>Vendedor:</strong>
-               <%= @ad.user.name %>
+               <%= link_to @ad.user.name, @ad.user %>
             </p>
             <p>
                <strong>Preço:</strong>
