--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -139,7 +139,8 @@
                 <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Stats Utilizadores</h3>
               </div>
               <div class="panel-body">
-              <%= pie_chart({"Agricultores" => 20, "Pescadores" => 5,"Caçadores" => 15}) %>
+                <% pie_chart( @dashboard.ads_per_category ) %>
+              <%= pie_chart({"Agricultores" => 20, "Pesca" => 5,"Caça" => 15}) %>
                <% pie_chart User.group("name").count %>
                 <div class="text-right">
                   <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
