--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @ad,:html => {:multipart => true,:id=>"ad-form"} do |f| %>
+<%= form_for @ad, :html => {:multipart => true,:id=>"ad-form"} do |f| %>
     <div class="control-group">
       <label class="control-label"> Categoria:</label>
       <div class="controls">
@@ -88,7 +88,9 @@
 
 
     <div class="field" style="margin-top:8px">
-      <%= f.label :images, "Adicionar Imagens" %><br>
+            
+  
+     <%= f.label :images, "Adicionar Imagens" %><br>
 
       <% @ad.ad_images.each do |ad_image| %>
           <% if !ad_image.new_record? %>
@@ -96,6 +98,11 @@
           <% end %>
       <% end %>
 
+
+<div class="panel-body">
+
+     
+</div>
 
       <div class="newPaperclipFiles">
 
@@ -109,6 +116,7 @@
             <% end %>
         <% end %>
       </div>
+
 
       <!--Link para adicionar mais imagens (show/hide JQuery)-->
       <br>
