--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
           <section class="panel">
                           <div class="panel-body bio-graph-info">
                               <h1> Profile Info</h1>
-                        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put ,:class=>"form-horizontal"}) do |f| %>
+                        <%= form_for( :html => { :method => :put ,:class=>"form-horizontal"}) do |f| %>
                            <%= devise_error_messages! %>
                               
                                   <div class="form-group">
