[Fix] avatar in header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -161,7 +161,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" style="padding-top:9px; padding-bottom:9px;" data-toggle="dropdown" >
             <!--<% image_tag current_user.avatar.url%>-->
-            <span><%= image_tag current_user.avatar.url(:medium), style:"width:35px; " %></span>
+            <span><%= image_tag current_user.avatar.url(:tiny) %></span>
             <b class="caret" id="dropCarret"></b>
           </a>
 
