--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -77,8 +77,10 @@
             </div>
         <% end %>
 
-        <div class="left-section">
-          <%= render "devise/shared/links"  %>
+        <div class="right-section links">
+              <a>
+               <%= render "devise/shared/links"  %>
+              </a>
         </div>
     <% end %>
 
