--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
                 </div>
                 <div class="bio-row">
 
-                    <p><span>Ocupação Resolver isto</span>: <%= @user %></p>
+                    <p><span>Ocupação Resolver isto</span>: <%= @user.ocupation %></p>
                 </div>
                 <div class="bio-row">
                     <p><span>Email </span>: <%= @user.email %></p>
