--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
           <section class="panel">
                           <div class="panel-body bio-graph-info">
                               <h1> Profile Info</h1>
-                        <%= form_for( :html => { :method => :put ,:class=>"form-horizontal"}) do |f| %>
+                        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put ,:class=>"form-horizontal"}) do |f| %>
                            <%= devise_error_messages! %>
 
                                   <div class="form-group">
@@ -67,7 +67,7 @@
                               <div class="panel-heading"> Mudar a password e Avatar</div>
                               <div class="panel-body">
 
-
+                                
                                       <div class="form-group">
                                           <label class="col-lg-2 control-label">Nova Password</label>
                                           <div class="col-lg-6">
@@ -95,35 +95,37 @@
                               </div>
                           </div>
 
-                          <section>
+                      <section>
                           <div class="panel panel-primary">
 
-                          <div class="panel-heading"> Salvar </div>
-                               <div class="panel-body">
-                                  <div class="form-group">
-                                          <label class="col-lg-2 control-label">Password atual</label>
-                                          <div class="col-lg-6">
+                                <div class="panel-heading"> Salvar 
 
-                                               <%= f.password_field :current_password ,:class=>"form-control",:id=>"c-pwd",:placeholder=>" " %>
-                                          </div>
-                                      </div>
+                                </div>
+                                     <div class="panel-body">
+                                        <div class="form-group">
+                                                <label class="col-lg-2 control-label">Password atual</label>
+                                                <div class="col-lg-6">
 
-                                      <div class="form-group">
-                                          <div class="col-lg-offset-2 col-lg-10">
+                                                     <%= f.password_field :current_password ,:class=>"form-control",:id=>"c-pwd",:placeholder=>" " %>
+                                                </div>
+                                        </div>
 
-                                              <%= f.submit "Salvar" ,:class=>"btn btn-success" %>
-                                              <%= link_to "Cancelar", :back ,:class=>"btn btn-default" %>
+                                            <div class="form-group">
+                                                <div class="col-lg-offset-2 col-lg-10">
 
-                                          </div>
-                                      </div>
+                                                    <%= f.submit "Salvar" ,:class=>"btn btn-success" %>
+                                                    <%= link_to "Cancelar", :back ,:class=>"btn btn-default" %>
 
+                                                </div>
+                                            </div>
+
+                                    </div>
                               </div>
-                          </div>
                       </section>
 
 
                           <% end %>
-                      </section>
+                </section>
 
                       <section>
                           <div class="panel panel-primary">
