--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -218,65 +218,13 @@
       <!-- produtos relacionados -->
       <div id="related" class="tab-pane active">
          <div class="row ads_index_section">
-            <% @related_ads.each do |ad| %>
-            <div class="col-sm-6 col-md-3">
-               <div class="panel">
-                  <div class="ads_index_img">
-                     <div class="thumbnail">
-                        <span class='price' ><%= ad.price %>€</span>
-                        <div >
-                           <%= link_to ad_image( ad.ad_images.first ), ad %>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="panel-body text-center">
-                     <% if !ad.category.blank? %>
-                     <div class="caption">
-                        <% if ad.category.nil? %>
-                        <span class="label pro_title" style="background-color: #888888">Desconhecido </span>
-                        <% else %>
-                        <span class="label pro_title" style="background-color: #<%= ad.category.color %>"><%= ad.category.name %>  </span>
-                        <% end %>
-                     </div>
-                     <% end %>
-                     <div style="height:50px"><%= link_to ad.title, ad %></div>
-                     <div style="height:50px"><i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %></div>
-                  </div>
-               </div>
-            </div>
-            <% end %>
+            <%= render :partial => @related_ads %>
          </div>
       </div>
       <!-- ultimos visitados -->
       <div id="last_viewed" class="tab-pane">
          <div class="row ads_index_section">
-            <% @last_viewed.each do |ad| %>
-            <div class="col-sm-6 col-md-3">
-               <div class="panel">
-                  <div class="ads_index_img">
-                     <div class="thumbnail">
-                        <span class='price' ><%= ad.price %>€</span>
-                        <div >
-                           <%= link_to ad_image( ad.ad_images.first ), ad %>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="panel-body text-center">
-                     <% if !ad.category.blank? %>
-                     <div class="caption">
-                        <% if ad.category.nil? %>
-                        <span class="label pro_title" style="background-color: #888888">Desconhecido </span>
-                        <% else %>
-                        <span class="label pro_title" style="background-color: #<%= ad.category.color %>"><%= ad.category.name %>  </span>
-                        <% end %>
-                     </div>
-                     <% end %>
-                     <div style="height:50px"><%= link_to ad.title, ad %></div>
-                     <div style="height:50px"><i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %></div>
-                  </div>
-               </div>
-            </div>
-            <% end %>
+            <%= render :partial => @last_viewed %>
          </div>
          <!-- </div> -->
       </div>
