--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -13,8 +13,6 @@
 }*/
 
 
-
-
 #navbarToggle{
   position:fixed;
   top:0;
@@ -517,11 +515,13 @@ hr {
 
 /****** Validations *********/
 label.valid {
-    width: 24px;
-    height: 24px;
+    padding: 0;
+    margin: 0;
+    width: 20px;
+    height: 20px;
     background: url(valid.png) center center no-repeat;
-    display: inline-block;
-    text-indent: -9999px;
+    vertical-align: middle;
+
 }
 label.error {
     font-weight: bold;
@@ -551,7 +551,9 @@ legend+.control-group{margin-top:18px;-webkit-margin-top-collapse:separate;}
 
 .input-xlarge{width:270px;}
 
-
+.control-label{
+    margin-bottom: 10px;
+}
 
 /************* THUMBS for answers**********/
 .up_vote {color:green;}
