--- a/app/views/academy/tutorials/_form.html.erb
+++ b/app/views/academy/tutorials/_form.html.erb
@@ -17,7 +17,7 @@
       </div>
 
       <div class="control-group">
-        <%= f.label :title, "Título",:class=>"control-label" %>
+        <%= f.label :title, "Título",:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_tutorial_title"></label>
         <div class="controls">
           <%= f.text_field :title,:placeholder => "Defina o título do tutorial" ,:class=>"form-control",:rel=>"tooltip",:title=>"Escolha um titulo apropriado.
          Seja claro e sucinto." %>
@@ -25,7 +25,7 @@
       </div>
 
       <div class="control-group">
-        <%= f.label :rapid_description, "Descrição" ,:class=>"control-label" %>
+        <%= f.label :rapid_description, "Descrição" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_tutorial_rapid_description"></label>
         <div class="controls">
           <%= f.text_area :rapid_description,:placeholder => "Descreva o seu tutorial...",:class=>"form-control", :rel=>"tooltip",:title=>"Escreva de forma clara e não utilize demasiada pontuação ou termos repetidos." %>
         </div>
