--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -1,4 +1,4 @@
-<div class="panel-group" id="accordion">
+<div class="panel-group" id="accordion" style="margin-bottom: 10px;">
 
     <!-- MERCADO -->
     <% if user_signed_in? %>
@@ -72,7 +72,7 @@
             </a>
           </h4>
         </div>
-        <div id="collapseAcademia" class="panel-collapse collapse in">
+        <div id="collapseAcademia" class="panel-collapse collapse">
           <div class="panel-body">
             <ul>
             <li><%= link_to "Entrar na Academia".html_safe, academy_path %></li>
