--- a/app/views/ratings/edit.html.erb
+++ b/app/views/ratings/edit.html.erb
@@ -6,7 +6,7 @@
 		</div>
 	    <div class="row lead">
 	        Tu deste um rating de <span id="count">0</span> cenoura(s)
-	        <div id="stars" class="starrr" onclick="javascript:send_rating()"></div>
+	        <div id="stars" class="starrr" onclick="javascript:send_rating()" value="5"></div>
 		</div>
 	</div>
 
